--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="p:domain_verify" content="4ca81bae64697570a207e00413121877"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Website Title -->
     <title>Jenna Sayle - Graduate Profile</title>
