--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                               Jenna<br />
                               Sayle
                           </h1><!-- Title -->
-                          <h3 class="animated fadeInUp delay-05s"><span class="rotate">CS Graduate student, Intern, Athlete</span></h3><!-- Text Rotator -->
+                          <h3 class="animated fadeInUp delay-05s"><span class="rotate">CS Graduate, MBSA student, Intern, Athlete</span></h3><!-- Text Rotator -->
                       </div>
                   </div>
                   <!-- Learn More Button -->
@@ -103,7 +103,7 @@
                   <div class="col-md-8 col-md-offset-2 wp1">
                       <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
                       <!-- about / welcome text -->
-                      <p>I am a third year Computer Science student at Miami University, were I am a student athlete on the Cross Country and Track and Field teams. Currently, I am pursuing both my Bachelors and Masters in Computer Science. My reasearch has recently begun in the area of Augmented Reality. Other research interests include Quantum Security and Injury Prediction in Distance runners.</p>
+                      <p>I am an MBSA student at Miami Universities' Farmer School of Businees. I graduated with a Masters and Bachelors Degree in Computer Science from Miami in May, 2023, were I was a student athlete on the Cross Country and Track and Field teams. Here I worked alongside professors on research topics such as Security and Privacy in Federated Learned, Quantum Computing and using HR to predict HRV via Machine Learning.</p>
                   </div>
               </div>
           </div>
@@ -131,8 +131,8 @@
                               <div class="icon">
                                   <i class="fa fa-camera"></i><!-- Icon -->
                               </div>
-                              <h2>Augmented Reality</h2><!-- Title -->
-                              <p>Within AR, I am working on....</p><!-- Description -->
+                              <h2>Federated Learning</h2><!-- Title -->
+                              <p>Performed a survey on the current state of privacy and security measures in Federated Learning. Currently in the editing phase to be published as a survey paper.</p><!-- Description -->
                           </div>
                           <!-- Service Box 2 -->
                           <div class="col-md-4 wp2 item delay-05s">
@@ -148,8 +148,9 @@
                                   <i class="fa fa-cubes"></i><!-- Icon -->
                               </div>
                               <h2>Injury Prediction</h2><!-- Title -->
-                              <p>In my free time, I have been working on building a regression model for prediticting injury in distance runners using heart rate recorded data.</p><!-- Description -->
-                          </div>
+                              <p>In my free time, I have been working on building a regression model for prediticting injury in distance runners using heart rate recorded data. Check out the project in my github ! </p><!-- Description -->
+                         	<a href="https://github.com/saylejl24/runAnalysis" title="Run Analysis">Run Analysis</a>
+			  </div>
                       </div>
                       <div class="clearfix"></div>
                   </div>
@@ -176,7 +177,18 @@
       </section>
 
       <div class="container-fluid">
-          <!-- About 1 -->
+           <!-- About 1 -->
+          <div class="row color-bg">
+              <div class="col-md-6 nopadding features-intro-img">
+                  <div class="about-image" style="background-image:url(img/about1.png)"></div><!-- about image 1 -->
+              </div>
+              <div class="col-md-6 about-text">
+                  <h6>Amazon Software Development Engineer Intern</h6><!-- headline-->
+                  <p>Summer 2023, I worked as a Software Development Intern on the Audience Metrics and Transparency team within Amazon Ads in Boulder, CO. Here, I created a Full Stack Application for the use of my team and its customers to facilitate alarming operations. I Worked in an extensive backend package to create new API functionality at new, secure endpoints. I also Provisioned and hosted the Application internally with an Authorization and Authentication scheme in a React Package </p><br><!-- About Text 1 -->
+
+              </div>
+          </div>
+	      <!-- About 2 -->
           <div class="row color-bg">
               <div class="col-md-6 nopadding features-intro-img">
                   <div class="about-image" style="background-image:url(img/about1.png)"></div><!-- about image 1 -->
@@ -187,7 +199,7 @@
 
               </div>
           </div>
-          <!-- About 2 -->
+          <!-- About 3 -->
           <div class="row">
               <div class="col-md-6 about-text">
                   <h6>AWS Software Development Intern </h6><!-- Headline -->
