--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <div class="col-md-8 col-md-offset-2 wp1">
                       <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
                       <!-- about / welcome text -->
-                      <p>I am an MBSA student at Miami Universities' Farmer School of Businees. I graduated with a Masters and Bachelors Degree in Computer Science from Miami in May, 2023, were I was a student athlete on the Cross Country and Track and Field teams. Here I worked alongside professors on research topics such as Security and Privacy in Federated Learned, Quantum Computing and using HR to predict HRV via Machine Learning.</p>
+                      <p>I am a MBSA student at Miami Universities' Farmer School of Businees. I graduated with a Masters and Bachelors Degree in Computer Science from Miami in May, 2023, where I was a student athlete on the Cross Country and Track and Field teams. Here I worked alongside professors on research topics such as Security and Privacy in Federated Learned, QKD in Quantum Computing and using HR to predict HRV via Machine Learning.</p>
                   </div>
               </div>
           </div>
@@ -188,17 +188,7 @@
 
               </div>
           </div>
-	      <!-- About 2 -->
-          <div class="row color-bg">
-              <div class="col-md-6 nopadding features-intro-img">
-                  <div class="about-image" style="background-image:url(img/about1.png)"></div><!-- about image 1 -->
-              </div>
-              <div class="col-md-6 about-text">
-                  <h6>Amazon Future Engineer Intern</h6><!-- headline-->
-                  <p>Summer 2020, I worked as a Software Development Intern on the Payment Method Delivery team within Amazon.com. Here, I developed a Payment Processor Availability Service to update amazon.com checkout page UI to inform customers of third-party banking services outages (Bank of America). My solution was deployed to Beta </p><br><!-- About Text 1 -->
-
-              </div>
-          </div>
+	     
           <!-- About 3 -->
           <div class="row">
               <div class="col-md-6 about-text">
@@ -210,6 +200,17 @@
                   </p><br>
 
               </div>
+	 <!-- About 2 -->
+          <div class="row color-bg">
+              <div class="col-md-6 nopadding features-intro-img">
+                  <div class="about-image" style="background-image:url(img/about1.png)"></div><!-- about image 1 -->
+              </div>
+              <div class="col-md-6 about-text">
+                  <h6>Amazon Future Engineer Intern</h6><!-- headline-->
+                  <p>Summer 2020, I worked as a Software Development Intern on the Payment Method Delivery team within Amazon.com. Here, I developed a Payment Processor Availability Service to update amazon.com checkout page UI to inform customers of third-party banking services outages (Bank of America). My solution was deployed to Beta </p><br><!-- About Text 1 -->
+
+              </div>
+          </div>
               <div class="col-md-6 nopadding features-intro-img">
                   <div class="about-image" style="background-image:url(img/about2.png)"></div><!-- about image 2 -->
               </div>
