--- a/index.html
+++ b/index.html
@@ -201,8 +201,9 @@
 
               </div>
 	  </div>
+	      
 	  <!-- About 3 -->
-          <div class="row">
+          <div class="row color-bg">
 	      <div class="col-md-6 nopadding features-intro-img">
                   <div class="about-image" style="background-image:url(img/about2.png)"></div><!-- about image 1 -->
               </div>
