--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <div class="col-md-8 col-md-offset-2 wp1">
                       <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
                       <!-- about / welcome text -->
-                      <p>I am a MBSA student at Miami Universities' Farmer School of Businees. I graduated with a Masters and Bachelors Degree in Computer Science from Miami in May, 2023, where I was a student athlete on the Cross Country and Track and Field teams. Here I worked alongside professors on research topics such as Security and Privacy in Federated Learned, QKD in Quantum Computing and using HR to predict HRV via Machine Learning.</p>
+                      <p>I am a MBSA student at Miami Universities' Farmer School of Businees. I will graduate with a Masters of Science in Business Analytics in May 2024. I graduated with a Masters and Bachelors Degree in Computer Science from Miami in May, 2023, where I was a student athlete on the Cross Country and Track and Field teams. Here I worked alongside professors on research topics such as Security and Privacy in Federated Learned, QKD in Quantum Computing and using HR to predict HRV via Machine Learning.</p>
                   </div>
               </div>
           </div>
