--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                   <div class="col-md-8 col-md-offset-2 wp1">
                       <h1 class="arrow"> <span>Resume</span> </h1><!-- Headline -->
                       <!-- about / welcome text -->
-                      <embed src="Jenna_Sayle_Resume (2).pdf" width="700" height="600">
+                      <embed src="Jenna_Sayle_Resume_2024.pdf" width="700" height="600">
                   </div>
               </div>
           </div>
