add photography portfolio section

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                               <a href="index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
                               <a href="index.html#service"><i class="fa fa-fw fa-globe"></i><span>Research</span></a>
                               <a href="index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Experience</span></a>
+                              <a href="index.html#photography"><i class="fa fa-fw fa-picture-o"></i><span>Photography</span></a>
                               <a href="index.html#contact"><i class="fa fa-fw fa-envelope-o"></i><span>Contact</span></a>
                           </div>
                       </nav>
@@ -159,9 +160,7 @@
       </section>
 
 
-      <!-- ==========================
-    ABOUT SECTION END
-    =========================== -->
+
       <!-- ==========================
         Experience SECTION
     =========================== -->
@@ -234,10 +233,47 @@
               </div>
           </div>
       </section>
+
+
       <!-- ==========================
-    PORTFOLIO SECTION END
+    Photography SECTION
     =========================== -->
-  
+      <section class="intro text-center section-padding color-bg" id="photography">
+          <div class="row">
+              <div class="col-md-8 col-md-offset-2 wp1">
+                  <h1 class="arrow"> <span>Photography</span> </h1><!-- Headline -->
+              </div>
+          </div>
+          <div class="container">
+              <!-- WELCOME TEXT -->
+              <div class="row">
+                  <div class="col-md-6">
+                      <h2>Long Exposure</h2>
+                      <div class="portfolio-images">
+                          <!-- Add your long exposure photo PNG files here -->
+                          <img src="photography/wiskHole.png" alt="Long Exposure Photo 1" class="portfolio-images">
+                          <img src="photography/crackOpenDoor.png" alt="Long Exposure Photo 2" class="portfolio-images">
+                          <img src="photography/AlexClose3HeadsPurple.png" alt="Long Exposure Photo 2" class="portfolio-images">
+                          <img src="photography/NicksteppingStones.png" alt="Long Exposure Photo 2" class="portfolio-images">
+                          <img src="photography/AlexLegGreen.png" alt="Long Exposure Photo 2" class="portfolio-images">
+                          <img src="photography/outsideRoom.png" alt="Long Exposure Photo 2" class="portfolio-images">
+                      </div>
+                  </div>
+                  <!-- Graduation Photos -->
+                  <div class="col-md-6">
+                      <h2>Graduation Photos</h2>
+                      <div class="portfolio-images">
+                          <img src="photography/JennaNickSpin.png" alt="Graduation Photo 1" class="portfolio-images">
+                          <img src="photography/LadiesChamp.png" alt="Graduation Photo 2" class="portfolio-images">
+                          <img src="photography/JelenaUpham.png" alt="Graduation Photo 2" class="portfolio-images">
+                          <img src="photography/LadiesChampV2.png" alt="Graduation Photo 2" class="portfolio-images">
+                          <img src="photography/NickJenna.png" alt="Graduation Photo 2" class="portfolio-images">
+                          <img src="photography/RoomiesLookingAtEachother.png" alt="Graduation Photo 2" class="portfolio-images">
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
 
    
       <!-- ==========================
